Fixed Background Bleed Edge

--- a/css/global_styles.css
+++ b/css/global_styles.css
@@ -79,7 +79,7 @@ input {
     height: 100vh;
     min-height: 100vh;
     min-width: 177vh;
-    margin-left: -3%;
+    margin-left: -5%;
     z-index: -1;
 
     overflow: hidden;
